--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
-    "start": "node router.js",
-    "dev": "nodemon router.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "node-fetch": "^3.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
