--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/AllyssaA/progressive-web-apps-2122/issues"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
